force-app/main/default/objects/Integrador__mdt/Integrador__mdt.object-meta.xml
<CustomObject>
    <description>Metadado para armazenar informações de Endpoints, login, senha</description>
    <label>Integração</label>
    <pluralLabel>Integradores</pluralLabel>
</CustomObject>