force-app/main/default/objects/Integrador__mdt/fields/LastToken__c.field-meta.xml
<CustomField>
    <fullName>LastToken__c</fullName>
    <label>LastToken</label>
    <type>TextArea</type>
</CustomField>