force-app/main/default/objects/Integrador__mdt/fields/login__c.field-meta.xml
<CustomField>
    <fullName>login__c</fullName>
    <label>login</label>
    <length>200</length>
    <type>Text</type>
</CustomField>