force-app/main/default/objects/Integrador__mdt/fields/senha__c.field-meta.xml
<CustomField>
    <fullName>senha__c</fullName>
    <label>senha</label>
    <length>200</length>
    <type>Text</type>
</CustomField>