force-app/main/default/objects/Integrador__mdt/fields/TokenLong__c.field-meta.xml
<CustomField>
    <fullName>TokenLong__c</fullName>
    <description
  >Token de acesso longo (ex: Meta Graph API long-lived token, >255 chars)</description>
    <label>Token Longo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>