force-app/main/default/objects/Integrador__mdt/fields/Validade_token__c.field-meta.xml
<CustomField>
    <fullName>Validade_token__c</fullName>
    <label>Validade token</label>
    <type>DateTime</type>
</CustomField>